--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-envs/
 
 # Spyder project settings
 .spyderproject
@@ -163,6 +162,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to `ignore the entire idea folder.
 #.idea/
 
-# Ignore data
+# Additional directories to ignore
 data/
 wandb/
