Match shortcut connection with paper

--- a/.gitignore
+++ b/.gitignore
@@ -162,6 +162,11 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to `ignore the entire idea folder.
 #.idea/
 
-# Additional directories to ignore
+# Data directory
 data/
+
+# Experiment tracking files
 wandb/
+
+# Saved model
+*.pth
